Tue Oct 22 19:37:43 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.inl (thr_join): Add deadlock detection for Windows
          at Vista/WinSvr2003 or higher. Prevents a thread calling join on
          itself from deadlocking, making the behavior similar to that of
          Pthreads, etc.

        * tests/Task_Wait_Test.cpp: Don't try this test on Windows systems
          without the deadlock detection available above. It hangs and there's
          little to be done about it.

        * NEWS: Added the deadlock feature description.

Tue Oct 22 17:20:09 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Added support for GCC 4.8.x address sanitizer. Can be enabled
          using address-sanitizer=1 in your platform_macros.GNU. See
          https://code.google.com/p/address-sanitizer/ for more details

Tue Oct 22 17:15:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added new package

Fri Oct 18 18:12:17 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/INet/FTP_Session.cpp:
          Fixed compile problem with Visual Studio 2013

Thu Oct 17 22:44:41 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/README: Remove entry for ACE_HAS_IPV6_V6ONLY - it's not used.

Thu Oct 17 11:51:47 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_hpux_aCC.GNU:
          Added support for c++0x

        * tests/Compiler_Features_21_Test.cpp:
          Invoke the helper method

Fri Oct  4 09:09:50 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Generate vc10/vc11 now as part of the release

Thu Oct  3 09:36:38 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html: