@@ -1,3 +1,13 @@
+Tue Oct 22 22:09:41 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * ace/Sock_Connect.cpp:
+
+          As of the release of Windows 2008, even hosts that have IPv6
+          interfaces disabled will still permit the creation of a PF_INET6
+          socket, thus rendering the socket creation test inconsistent. The
+          reccommended solution is to get the list of endpoint addresses and
+          see if any match the desired family.
+
 Tue Oct 22 19:37:43 UTC 2013  Steve Huston  <shuston@riverace.com>
 
         * ace/OS_NS_Thread.inl (thr_join): Add deadlock detection for Windows
